# etym

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE.txt  MANIFEST  Makefile  README.md  etym  etymology  flake.nix  justfile  pyproject.toml  release  requirements.txt  setup.py  test.py
.cargo/: config.toml
debian/: changelog  control  etym.triggers  postinst  rules
etym/: __init__.py  cli.py  exceptions.py  utils.py
src/: lib.rs  main.rs
tests/: fixture-scrimshaw.html  fixture-viking.html  test_etym.py
