[tool.poetry]
name = "etym"
version = "0.0.4"
description = "Searches for etymology from EtymOnline.com"
authors = ["Conor Schaefer <conor.schaefer@gmail.com>"]

[tool.poetry.scripts]
etym = "etym.cli:main"

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.9.1"
requests = "^2.24.0"
blessings = "^1.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.8.3"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
